--- a/public/css/unsliderdots.css
+++ b/public/css/unsliderdots.css
@@ -17,11 +17,11 @@
 }
 .unslider-nav ol li {
   display: inline-block;
-  width: 6px;
-  height: 6px;
+  width: 10px;
+  height: 10px;
   margin: 0 4px;
   background: transparent;
-  border-radius: 5px;
+  border-radius: 50%;
   overflow: hidden;
   text-indent: -999em;
   border: 2px solid #888888;
