--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -375,7 +375,7 @@ right: 15%
   background-color: white;
 }
 #business-page img {
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   text-align: center;
   display: block;
@@ -483,7 +483,6 @@ right: 15%
 .corporate-quote .logo {
   vertical-align:middle;
   text-align: left;
-  width: 300px;
   display: inline-block;
 }
 .corporate-quote .logo img{
@@ -498,6 +497,9 @@ right: 15%
 .board-detail p{
   color: #777777;
   line-height: 30px;
+}
+.board-detail h2{
+  color: #777777;
 }
 .bold {
   font-weight: 400;
@@ -595,6 +597,9 @@ right: 15%
 .charm {
   margin-top: 20px;
   font-family: Montserrat;
+}
+.hidden-readmore {
+  display: none;
 }
 .caption {
   padding: 30px 20% 0 20%;
@@ -702,6 +707,14 @@ right: 15%
     padding-left: 20px;
     padding-right: 20px;
     height: auto;
+    overflow:visible;
+  }
+  .modal-hide-container {
+    position: fixed;
+    height: 100vh;
+    z-index: 999;
+    top: 0;
+    bottom: 0;
   }
   .side-navigation {
     display: none;
@@ -715,24 +728,37 @@ right: 15%
   .video-container {
     display: none;
   }
-}
-@media only screen and (max-width: 668px) {
-  body.modal-open {
-      overflow: hidden;
+  .board-detail-name {
+    margin-bottom: 20px;
+    text-align: center;
   }
-  .slide-arrows {
-    position: absolute;
-    top: -10px;
+  .board-card img {
+    width: 80%;
+  }
+  .slide-arrows.left{
+  left: -10px;
+  }
+  .slide-arrows.right{
+  right: -10px;
+  }
+  .modal-hide > img {
+    display: none;
+  }
+  .modal-content {
+    padding-bottom: 50px!important;
+    padding-top: 50px!important;
+    max-width: 100%!important;
   }
   .modal-hide {
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
-    max-height: 70vh;
     overflow-y: scroll;
   }
-  .modal-content {
-    max-width: 100%!important;
+}
+@media only screen and (max-width: 668px) {
+  body.modal-open {
+      overflow: hidden;
   }
   .nav-bar {
     position: fixed;
