--- a/public/css/flaticon.css
+++ b/public/css/flaticon.css
@@ -30,6 +30,8 @@ color: rgb(116, 116, 116);
 }
 
 .flaticon-back:before { content: "\f100"; }
-.flaticon-left-quotes-sign:before { content: "\f101"; }
-.flaticon-next:before { content: "\f102"; }
-.flaticon-right-quotes-sign:before { content: "\f103"; }
+.flaticon-facebook:before { content: "\f101"; }
+.flaticon-left-quotes-sign:before { content: "\f102"; }
+.flaticon-next:before { content: "\f103"; }
+.flaticon-right-quotes-sign:before { content: "\f104"; }
+.flaticon-search:before { content: "\f105"; font-size: 20px;}
