--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,7 +120,7 @@ h1 {
   margin: 0 auto;
 }
 .modal-hide .modal-content {
-  padding: 0 5% 0 5%;
+  padding: 5%;
   display: inline-block;
   vertical-align: middle;
   max-width: 69%;
@@ -399,21 +399,20 @@ right: 15%
   text-align: justify;
 }
 #vision-page {
-  background-image: url('../images/Panjaluck_BG_FPO BG.png');
   background-position: center;
   background-size: cover;
   background-position: fixed;
   z-index: 4;
 }
 #vision-page h1 {
-  color: white;
+  color:#9c171a;
 }
 #vision-page p{
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  color: white;
+  color: black;
   font-family: kanit;
   max-width: 700px;
   text-align: justify;
@@ -753,6 +752,10 @@ right: 15%
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
+    overflow: hidden;
+  }
+  .modal-content {
+    height: 50vh;
     overflow-y: scroll;
   }
 }
