--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,9 @@ body {
   font-size: 16px;
   font-family: Montserrat;
 }
+body.modal-open {
+    overflow: hidden!important;
+}
 a {
   text-decoration: none;
 }
@@ -69,11 +72,13 @@ h1 {
   margin-top: 15px;
 }
 .modal-hide-container {
-  position: absolute;
   background-color: rgba(255,255,255,0.9);
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  bottom: 0;
   left: 0;
-  right: 0;
-  height: 700px;
+  right :0;
   z-index: 20;
   display: none;
 }
@@ -94,11 +99,14 @@ h1 {
 }
 .modal-hide {
   transform: translateZ(0);
-  position: absolute;
+  position: fixed;
   z-index: 30;
   background-color: #f7f7f7;
   left: 0;
   right: 0;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
   margin: 0 auto;
   text-align: left;
   width: 80%;
@@ -337,7 +345,6 @@ h1 {
   height: calc(100vh - 80px);
   background-color: white;
   overflow: hidden;
-  min-height: 700px;
 }
 .slide-arrows {
   position: absolute;
@@ -424,15 +431,26 @@ h1 {
   text-align: justify;
 }
 #corporate-page {
-
+  position: relative;
 }
 #corporate-page h1{
   position: relative;
   z-index: 2;
 }
-#corporate-page video {
-  margin-top: -30px;
-  width: 101%;
+#corporate-page .logo-fade-1 {
+  margin-top: -170px;
+  transition: 0.5s;
+}
+#corporate-page .logo-fade-2 {
+  margin-top: -100px!important;
+}
+#corporate-page .logo-fade-2,.logo-fade-1 {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 1000px;
+  width: 100%;
 }
 .flaticon-left-quotes-sign:before {
   color:#9c171a!important;
@@ -460,7 +478,7 @@ h1 {
   text-align: center;
 }
 .letter-detail--thai {
-  font-size: 12px;
+  font-size: 10px;
   display: block;
   letter-spacing: 0;
   color: #505050;
@@ -487,7 +505,7 @@ h1 {
 }
 .corporate-quote .logo {
   vertical-align:middle;
-  text-align: left;
+  text-align: center;
   display: inline-block;
 }
 .corporate-quote .logo img{
@@ -526,6 +544,14 @@ h1 {
   font-size: 18px;
   line-height: 30px;
   font-weight: 400;
+}
+.board-detail .position {
+  font-weight: 400;
+  font-size: 14px;
+}
+.board-detail img {
+  margin: 0 auto;
+  display: block;
 }
 .board-detail h2{
   color: #777777;
@@ -580,9 +606,9 @@ h1 {
   padding: 50px 20% 0 20%;
 }
 .charm .letter {
-  font-size: 100px;
+  font-size: 80px;
   color:#9c171a;
-  padding: 0 15px;
+  padding: 0 5px;
   display: inline-block;
 }
 .collapse--faq {
@@ -768,7 +794,13 @@ h1 {
     display: none
   }
   .corporate-quote {
-    opacity: 1;
+    opacity: 1
+  }
+  .logo-fade-1 {
+    display: none;
+  }
+  .logo-fade-2 {
+    display: none;
   }
   .video-container {
     display: none;
@@ -801,14 +833,11 @@ h1 {
     overflow: hidden;
   }
   .modal-content {
-    height: 80vh;
+    max-height: 80vh;
     overflow-y: scroll;
   }
 }
 @media only screen and (max-width: 668px) {
-  body.modal-open {
-      overflow: hidden;
-  }
   .nav-bar {
     position: fixed;
     padding: 0 20px;
@@ -862,6 +891,15 @@ h1 {
 
   .footer {
     display: none;
+  }
+
+}
+@media only screen and (max-width: 450px) {
+  .quotes {
+    display: none!important;
+  }
+  .charm .letter {
+    display: block;
   }
 
 }
