--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,7 +58,7 @@ h1 {
   font-size: 12px;
   line-height: 12px!important;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 200;
 }
 .board-thai-name {
   font-size: 13px;
@@ -70,6 +70,15 @@ h1 {
 .board-detail-name {
   line-height: 15px;
   margin-top: 15px;
+}
+.board-person-image {
+  width: 30%;
+  box-sizing: border-box;
+  background-position: center;
+  background-size: cover;
+  height: 450px;
+  display: inline-block;
+  vertical-align: middle;
 }
 .modal-hide-container {
   background-color: rgba(255,255,255,0.9);
@@ -84,18 +93,13 @@ h1 {
 }
 .x-modal {
   cursor: pointer;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  background-color: #636363;
-  border: 1px solid rgb(213, 213, 213);
-  color: white;
   position: absolute;
-  text-align: center;
-  line-height: 25px;
-  font-size: 10px;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
+}
+.x-modal img {
+  width: 25px!important;
+  max-width: none!important;
 }
 .modal-hide {
   transform: translateZ(0);
@@ -111,7 +115,7 @@ h1 {
   text-align: left;
   width: 80%;
   max-width: 1000px;
-  box-shadow: 1px 1px 10px 1px rgb(222, 222, 222);
+  box-shadow: 1px 1px 10px 1px rgb(235, 235, 235);
 }
 .modal-hide--logo {
   padding-top: 2%;
@@ -132,6 +136,7 @@ h1 {
   display: inline-block;
   vertical-align: middle;
   max-width: 69%;
+  width: 100%;
 }
 
 .side-navigation {
@@ -149,7 +154,7 @@ h1 {
   display: inline-block;
   vertical-align: middle;
   font-weight: 400;
-  color: #545454;
+  color: #888888;
   line-height: 8px;
   transition: 0.1s
 }
@@ -249,7 +254,7 @@ h1 {
   cursor: pointer;
 }
 .nav-bar__navigation.active{
-  color: black;
+  color: #888888;
 }
 
 .nav-bar__navigation.ticket {
@@ -388,7 +393,7 @@ h1 {
   background-color: white;
 }
 #business-page img {
-  max-width: 450px;
+  max-width: 400px;
   width: 100%;
   text-align: center;
   display: block;
@@ -414,18 +419,17 @@ h1 {
 #vision-page {
   background-position: center;
   background-size: cover;
-  background-position: fixed;
   z-index: 4;
 }
 #vision-page h1 {
-  color:#9c171a;
+  color: white;
 }
 #vision-page p{
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  color: black;
+  color: white;
   font-family: kanit;
   max-width: 700px;
   text-align: justify;
@@ -597,6 +601,13 @@ h1 {
 }
 .board-card img {
   width: 100%;
+}
+.board-card a {
+  width: 100%;
+  height: 350px;
+  display: block;
+  background-size: cover;
+  background-position: center;
 }
 .main.active {
   opacity: 1;
