--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,7 +103,7 @@ h1 {
   transform: translateY(-50%);
   margin: 0 auto;
   text-align: left;
-  width: 80%;
+  width: 90%;
   max-width: 1000px;
   box-shadow: 1px 1px 10px 1px rgb(235, 235, 235);
 }
@@ -122,7 +122,7 @@ h1 {
   margin: 0 auto;
 }
 .modal-hide .modal-content {
-  padding: 2% 8% 2% 8%;
+  padding: 2% 6% 2% 8%;
   display: inline-block;
   vertical-align: middle;
   max-width: 69%;
@@ -407,7 +407,7 @@ h1 {
   text-align: left;
 }
 #vision-page {
-  background-position: center;
+  background-position: bottom;
   background-size: cover;
   z-index: 4;
 }
