--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -139,6 +139,7 @@ h1 {
   line-height: 12px!important;
   text-transform: uppercase;
   font-weight: 200;
+  font-family: Montserrat;
 }
 .board-thai-name {
   font-size: 13px;
@@ -484,7 +485,8 @@ h1 {
   text-align: center;
   color: #363636;
   font-family: kanit;
-  max-width: 700px;
+  max-width: 750px;
+  font-size: 18px;
   text-align: left;
 }
 #vision-page {
@@ -503,6 +505,7 @@ h1 {
   color: white;
   font-family: kanit;
   max-width: 700px;
+  font-size: 18px;
   text-align: justify;
 }
 #corporate-page {
@@ -656,6 +659,9 @@ h1 {
   margin-bottom: 0 !important;
   padding: 0;
 }
+#faq-page {
+  padding-bottom: 40px;
+}
 #charm-page {
   background-color: white;
 }
@@ -704,6 +710,7 @@ h1 {
   border-bottom: 1px solid white;
   box-sizing: border-box;
   text-transform: uppercase;
+  font-size: 18px;
 }
 .collapse--faq .collapse-header {
   background-color: #c9c6c6;
