--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,16 +28,22 @@ h1 {
 .contact-us-form {
   font-size: 16px;
   width: 100%;
+  margin-top: 20px;
+}
+.contact-us-headline {
+  font-size: 18px;
+  margin-bottom: 5px;
 }
 .contact-us-form input {
   display: inline-block;
-  width: 203px;
-  font-size: 12px;
+  width: 200px;
+  font-size: 14px;
   padding: 5px;
   margin: 5px 5px 5px 0;
   border: 0;
   color: black;
   font-family: Montserrat;
+  box-sizing: content-box;
 }
 .contact-us-form input::-webkit-input-placeholder {
   font-family: Montserrat;
@@ -49,10 +55,10 @@ h1 {
   height: 70px;
   resize: none;
   border: 0;
-  font-size: 12px;
+  font-size: 14px;
   padding: 5px;
-  margin: 5px 5px 5px 0;
   color: black;
+  box-sizing:content-box;
 }
 .contact-us-form button {
   background: white;
@@ -61,6 +67,7 @@ h1 {
   border: 0;
   padding: 5px 10px;
   cursor: pointer;
+  font-family: Montserrat;
 }
 .contact-us-form textarea::-webkit-input-placeholder {
   font-family: Montserrat;
@@ -80,7 +87,7 @@ h1 {
   font-size: 0;
 }
 .footer h2 {
-  font-size: 26px;
+  font-size: 24px;
 }
 .footer .subBlock {
   width: 33.33%;
@@ -104,7 +111,6 @@ h1 {
 .subBlock ul li {
   cursor: pointer;
   font-size: 12px;
-  padding: 1px 0;
   padding-left: 0;
   opacity: 0.9;
 }
