--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,6 +89,13 @@ h1 {
 .footer h2 {
   font-size: 24px;
 }
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+a:visited:hover {
+  text-decoration: none;
+}
 .footer .subBlock {
   width: 33.33%;
   vertical-align: top;
@@ -109,10 +116,12 @@ h1 {
   background: #90171a;
 }
 .subBlock ul li {
-  cursor: pointer;
   font-size: 12px;
   padding-left: 0;
   opacity: 0.9;
+}
+.subBlock a {
+  cursor: pointer;
 }
 .subBlock ul li:first-child {
   margin-bottom: 10px;
