--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,30 @@ h1 {
   color:#9c171a;
   font-size: 40px!important;
 }
-/*------------------global----------------*/
+/*CUSTOM DROPDOWN*/
+.customDropdown {
+  position: relative;
+  padding: 0 10px;
+  display: none;
+}
+.customDropdown .options {
+  position: absolute;
+  left: 0;
+  text-align: left;
+  width: 100%;
+  color: white;
+}
+.options .option {
+  background-color: #939191;
+  padding: 2px 10px;
+  border-bottom: 1px solid #575757;
+}
+.options .option:hover {
+  background-color:#c3c3c3;
+  padding: 2px 10px;
+  border-bottom: 1px solid #575757;
+}
+/*OTHERS*/
 .contact-us-form {
   font-size: 16px;
   width: 100%;
@@ -378,7 +401,7 @@ a:visited:hover {
   transform: rotate(0deg);
   transition: .5s ease-in-out;
   cursor: pointer;
-  z-index: 20;
+  z-index: 60;
   right: 0;
   display: none;
 }
@@ -437,7 +460,6 @@ a:visited:hover {
 
 .section {
   position: relative;
-  background-size: cover;
   width: 100%;
   text-align: center;
   padding-top: 20px;
@@ -523,8 +545,8 @@ a:visited:hover {
   text-align: left;
 }
 #vision-page {
-  background-position: 0 50%;
   background-size: cover;
+  background-position: bottom;
   z-index: 4;
 }
 #vision-page h1 {
@@ -990,6 +1012,18 @@ a:visited:hover {
     position: fixed;
     padding: 0 20px;
   }
+  .nav-bar__navigation.dropdownSelect {
+    position: fixed;
+    top: 30px;
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    z-index: 60;
+    left: 20px;
+  }
+  .dropdownMobile {
+    display: block;
+  }
   .partner-container {
     max-width: 600px;
   }
@@ -1021,7 +1055,7 @@ a:visited:hover {
     width: 100%;
     transform: translate3d(-100vw,0,0);
     height: 100vh;
-    z-index: 10;
+    z-index: 50;
     top: 0;
     padding-top: 40%;
     transition: 0.3s ease-in-out;
@@ -1052,11 +1086,14 @@ a:visited:hover {
 
 }
 @media only screen and (max-width: 450px) {
+  #vision-page {
+    background-position: top;
+    background-size: 400%;
+  }
   .quotes {
     display: none!important;
   }
   .charm .letter {
     display: block;
   }
-
 }
