--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -931,7 +931,10 @@ a:visited:hover {
     width: 100%;
   }
   .board-person-image {
-    display: none;
+    display: block;
+    margin: 20px auto;
+    width: 100px;
+    height: 137.5px;
   }
   .partner-detail .modal-content {
   padding-top: 5%;
@@ -960,7 +963,7 @@ a:visited:hover {
   .board-container {
     padding: 0 5%;
   }
-  .modal-content br{
+  .modal-content p br{
     display: none
   }
   .corporate-quote {
@@ -994,8 +997,7 @@ a:visited:hover {
     padding-left: 0!important;
   }
   .modal-content {
-    padding-bottom: 50px!important;
-    padding-top: 50px!important;
+    padding-bottom: 20px!important;
     max-width: 100%!important;
   }
   .modal-hide {
@@ -1005,7 +1007,7 @@ a:visited:hover {
     overflow: hidden;
   }
   .modal-content {
-    max-height: 60vh;
+    max-height: 40vh;
     overflow-y: scroll;
   }
 }
@@ -1091,6 +1093,16 @@ a:visited:hover {
   #vision-page {
     background-position: top;
     background-size: 400%;
+  }
+  .board-detail .modal-content {
+    height: 50vh;
+    overflow-y: scroll;
+  }
+  .footer-copy-right {
+    font-size: 7px;
+  }
+  .footer-copy-right img {
+    width: 7px;
   }
   .quotes {
     display: none!important;
