--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -480,7 +480,8 @@ a:visited:hover {
 }
 .slide-arrows {
   position: absolute;
-  top: 45%;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 2;
   width: 50px;
   cursor: pointer;
@@ -746,7 +747,6 @@ a:visited:hover {
 }
 .board-card a {
   width: 100%;
-  height: 380px;
   display: block;
   background-size: cover;
   background-position: center;
@@ -969,7 +969,7 @@ a:visited:hover {
     display: none;
   }
   .board-container {
-    padding: 0 5%;
+    padding: 0 10%;
   }
   .modal-content p br{
     display: none
@@ -989,9 +989,6 @@ a:visited:hover {
   .board-detail-name {
     margin-bottom: 20px;
     text-align: center;
-  }
-  .board-card img {
-    width: 70%;
   }
   .slide-arrows.left{
   left: -15px
@@ -1107,6 +1104,9 @@ a:visited:hover {
   }
   .board-card a {
     background-position: top!important;
+  }
+  .board-card img {
+    width: 80%;
   }
   .board-detail .modal-content {
     height: 50vh;
