--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,7 +295,7 @@ a:visited:hover {
 .active {
   opacity: 1;
 }
-.side-navigation .dot-nav {
+.dot-nav {
   width: 12px;
   height: 12px;
   margin: 10px 0;
@@ -306,7 +306,24 @@ a:visited:hover {
   display: inline-block;
   vertical-align: middle;
 }
-.side-navigation .dot-nav.active {
+.dot-nav-slide {
+  width: 12px;
+  height: 12px;
+  margin: 10px 0;
+  border-radius: 50%;
+  background-color: white;
+  border: 2px solid #c3c3c3;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+}
+.slick-dots li {
+  margin: 0 2px!important;
+}
+.slick-active .dot-nav-slide {
+  background-color: #c3c3c3;
+}
+.dot-nav.active {
   background-color: #c3c3c3;
 }
 .row {
@@ -1089,9 +1106,6 @@ a:visited:hover {
   .partner-container {
     max-width: 600px;
   }
-  .board-card {
-    padding: 0 15px;
-  }
   #hamberger-menu {
     display: block;
   }
@@ -1159,11 +1173,14 @@ a:visited:hover {
     background-position: top;
     background-size: 400%;
   }
+  .slick-container-slider {
+    width: 100%;
+  }
+  .slide-arrows {
+    display: none!important;
+  }
   .board-card a {
     background-position: top!important;
-  }
-  .board-card img {
-    width: 80%;
   }
   .board-detail .modal-content {
     height: 50vh;
