--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,21 @@ body {
   margin: 0 auto;
   font-size: 16px;
   font-family: Montserrat;
+  height: 100%;
+  overflow: hidden;
+}
+html {
+  height: 100%;
+  overflow: hidden;
+}
+.container-app {
+  overflow: auto;
+  position : absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 50;
 }
 body.modal-open {
     overflow: hidden!important;
@@ -218,7 +233,6 @@ a:visited:hover {
   bottom: 0;
   left: 0;
   right :0;
-  z-index: 20;
   display: none;
 }
 .x-modal {
@@ -806,7 +820,7 @@ a:visited:hover {
 .board-card {
   padding: 0;
   white-space: normal;
-  width: 33.33%
+  width: 33.33%;
   display: inline-block;
 }
 .board-card img {
@@ -1018,7 +1032,7 @@ a:visited:hover {
   .modal-hide-container {
     position: fixed;
     height: 100vh;
-    z-index: 999;
+    z-index: 9999999;
     top: 0;
     bottom: 0;
   }
